finish fetch class

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <main>
             <div class="grid" id="grid">
+                <!-- content goes here -->
             </div>
         </main>
 
